# android-demo

./: build.gradle  settings.gradle
AAudio/: build.gradle
AAudio/src/main/: AndroidManifest.xml
AAudio/src/main/java/com/example/aaudio/: MainActivity.java
AAudio/src/main/jni/: CMakeLists.txt  Logger.hpp  native-audio-jni.cc
AAudio/src/main/res/layout/: activity_main.xml
AAudio/src/main/res/values/: strings.xml  themes.xml
AAudio/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
